small layout fix to question page: added spacing around social media sharing buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -734,3 +734,8 @@ fa.breadcrumb {
 
     }
 }
+
+/* this is for the group of social media buttons */
+.sharing-buttons {
+    padding-top: 1em;
+}
